--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "cweagans/composer-patches": "^1.6",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
+        "drupal/environment_indicator": "^4.0",
+        "drupal/scheduler": "^1.5",
+        "drupal/ultimate_cron": "^2.0@alpha",
         "drush/drush": "^11",
         "oomphinc/composer-installers-extender": "^2"
     },
